--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
       integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js"></script>
     </head>
 <body>
-    
+    <main>
+        <header>Tic-Tac-Toe</header>
+        <article><div class="jatekTer">
+
+        </div></article>
+        
+    </main>
+    <footer>Szalkai Viktória</footer>
 </body>
 </html>
